[workspace]
resolver = "2"
members = ["packages/dx-ether-rs", "packages/web"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Andrey Dudnik <7reyddk@gmail.com>"]
description = "Connect ether browser extension provider"
documentation = "https://github.com/kotletti/dx-ether-rs"
homepage = "https://github.com/kotletti/dx-ether-rs"
repository = "https://github.com/kotletti/dx-ether-rs"
readme = "./README.md"
license = "MIT OR Apache-2.0"
publish = true

[workspace.dependencies]
dx-ether-rs = { package = "dx-ether-rs", path = "packages/dx-ether-rs" }
web = { package = "web", path = "packages/web" }
dioxus = { version = "0.6.3", features = ["web"] }
web-sys = { version = "0.3.77" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
alloy-core = { version = "1.2.1" }
alloy-provider = { version = "1.0.12" }
alloy-primitives = { version = "1.2.1" }
alloy-sol-types = { version = "1.2.1", features = ["json"] }
alloy-sol-macro = { version = "1.2.1", features = ["json"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
